# eval-pipeline

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  test_groq_smoke.py
data/: eval_set.jsonl  example_answers.json
data/corpus/: aalderen_school.md  conservation_studio.md  margriet_dekker.md  pieter_van_loon.md  readme.md  test.txt  verhoeven_museum.md  visiting_information.md  woman_reading_north_window.md
scripts/: build_examples.py
src/: __init__.py  api.py  config.py  generate.py  ingest.py  pipeline.py  providers.py  retrieve.py
src/evals/: metrics.py  run_eval.py
src/static/: index.html
tests/: test_metrics.py
